feature(jpackage): add jpackage check and build full installer steps (#128)
* feature(jpackage): add jpackage check and build full installer steps

* test(display): add install virtual display (Xvfb) for Linux

---------

Co-authored-by: ramil-khamatyarov <ramil.hamatyarov@yandex.ru>